--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,9 @@ jobs:
     - name: Install dependencies
       run: npm install
     - name: Install Playwright browsers
-      run: npx playwright install --with-deps
+      run: |
+        chmod +x node_modules/.bin/playwright
+        npx playwright install --with-deps
     - name: Run Playwright tests
       run: npx playwright test
     - name: Upload test report
